# password_manager

./: .gitignore  CMakeLists.txt  README.md  main.c
docs/: design.md  future.md  requirements.md
include/: crypto.h  password.h  storage.h  utils.h
src/: crypto.c  password.c  storage.c  utils.c
tests/: CMakeLists.txt  test_password.c
